--- a/ether_ipApp/src/Makefile.Host
+++ b/ether_ipApp/src/Makefile.Host
@@ -4,20 +4,24 @@ include $(TOP)/config/CONFIG_APP
 #----------------------------------------
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 
-RECTYPES += xxxRecord.h
-DBDEXPAND = exampleInclude.dbd
-DBDNAME = exampleApp.dbd
+DBDEXPAND = ether_ipInclude.dbd
+DBDNAME = ether_ip_test.dbd
+DBDINSTALL += ether_ip.dbd
 
 #USR_CFLAGS += 
-PROD_LIBS	+= ca
-PROD_LIBS	+= Db
-PROD_LIBS	+= Com
+#PROD_LIBS	+= ca
+#PROD_LIBS	+= Db
+#PROD_LIBS	+= Com
 ca_DIR  = $(EPICS_BASE_LIB)
 Db_DIR  = $(EPICS_BASE_LIB)
 Com_DIR = $(EPICS_BASE_LIB)
 
-PROD += caExample
+PROD += ether_ip_test
 
 include $(TOP)/config/RULES.Host
 #----------------------------------------
 #  ADD RULES AFTER THIS LINE
+
+
+
+
