--- a/ether_ipApp/src/Makefile.Vx
+++ b/ether_ipApp/src/Makefile.Vx
@@ -1,4 +1,4 @@
-# Makefile.Vx
+# Makefile.Vx -*- makefile -*-
 TOP = ../../..
 include $(TOP)/config/CONFIG_APP
 #----------------------------------------
@@ -8,13 +8,13 @@ SRCS.c += ../dl_list.c
 SRCS.c += ../ether_ip.c
 SRCS.c += ../drvEtherIP.c
 SRCS.c += ../devEtherIP.c
+SRCS.c += ../mem_string_file.c
 
 LIBOBJS += dl_list.o
 LIBOBJS += ether_ip.o
 LIBOBJS += drvEtherIP.o
 LIBOBJS += devEtherIP.o
-
-
+LIBOBJS += mem_string_file.o
 
 LIBNAME = ether_ipLib
 
