Adapted JLab SNS ADE

--- a/config/CONFIG
+++ b/config/CONFIG
@@ -1,4 +1,4 @@
 #CONFIG
 # Add any changes to make rules here
 CROSS_COMPILER_TARGET_ARCHS = mv2100 mv2300
-CROSS_COMPILER_TARGET_ARCHS = mv2100
+CROSS_COMPILER_TARGET_ARCHS = mv2100 ppc603
