No more mv2100, onlt ppc603 target

--- a/config/CONFIG
+++ b/config/CONFIG
@@ -1,4 +1,3 @@
 #CONFIG
 # Add any changes to make rules here
-CROSS_COMPILER_TARGET_ARCHS = mv2100 mv2300
-CROSS_COMPILER_TARGET_ARCHS = mv2100 ppc603
+CROSS_COMPILER_TARGET_ARCHS = ppc603
