--- a/ether_ipApp/Db/Makefile
+++ b/ether_ipApp/Db/Makefile
@@ -1,3 +1,13 @@
-TOP=../..
+# Makefile
+TOP = ../..
+ifdef EPICS_HOST_ARCH
+
+include $(TOP)/configure/CONFIG
+include $(TOP)/configure/RULES
+
+else
+
 include $(TOP)/config/CONFIG_APP
 include $(TOP)/config/RULES_ARCHS
+
+endif
