--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -3,7 +3,7 @@
 include $(TOP)/configure/CONFIG_APP
 # Add any changes to make definitions here
 
-#CROSS_COMPILER_TARGET_ARCHS = vxWorks-68040
+#CROSS_COMPILER_TARGET_ARCHS = vxWorks-ppc603
 
 # Use this when your IOC and the host use different paths
 # to access the application. Typically this will be 
