Test with vxWorks under R3.14.4. Removed dm2k files which were outdated and unused

--- a/iocBoot/iocether_ip/Makefile
+++ b/iocBoot/iocether_ip/Makefile
@@ -2,7 +2,9 @@ TOP = ../..
 ifdef EPICS_HOST_ARCH
 
 include $(TOP)/configure/CONFIG
-ARCH = RTEMS-svgm
+#ARCH = RTEMS-svgm
+ARCH = vxWorks-ppc603
+TARGETS = cdCommands
 include $(TOP)/configure/RULES.ioc
 
 else
