Demo setup: Include stringout, used tags from L8x test

--- a/testether_ipApp/Db/Makefile
+++ b/testether_ipApp/Db/Makefile
@@ -21,6 +21,7 @@ DB += eip_stat.db
 DB += test.db
 DB += mod.db
 DB += brad.db
+DB += brad2.db
 
 include $(TOP)/configure/RULES
 #----------------------------------------
