eipIoc: Remove *Include.dbd ...
.. and instead list included *.dbd in the Makefile.
Use the actual base.dbd from EPICS base and not the broken
copy that lacks the menuScan.dbd for R3.15

--- a/testether_ipApp/src/Makefile
+++ b/testether_ipApp/src/Makefile
@@ -8,8 +8,10 @@ include $(TOP)/configure/CONFIG
 # <name>.dbd will be created from <name>Include.dbd
 DBD += eipIoc.dbd
 
-#=============================
+eipIoc_DBD += base.dbd
+eipIoc_DBD += ether_ip.dbd
 
+# Hard-code location of DBD in product
 FINAL_LOCATION = $(shell $(PERL) $(TOOLS)/fullPathName.pl $(INSTALL_LOCATION))
 EIP_DBD = $(FINAL_LOCATION)/dbd/eipIoc.dbd
 USR_CPPFLAGS += -DEIP_DBD=\"$(EIP_DBD)\"
