Support LINT on darwin-aarch64

--- a/testether_ipApp/src/Makefile
+++ b/testether_ipApp/src/Makefile
@@ -13,6 +13,9 @@ USR_CPPFLAGS += -DSUPPORT_LINT
 else ifeq ($(EPICS_HOST_ARCH),darwin-x86)
 USR_CFLAGS += -DSUPPORT_LINT
 USR_CPPFLAGS += -DSUPPORT_LINT
+else ifeq ($(EPICS_HOST_ARCH),darwin-aarch64)
+USR_CFLAGS += -DSUPPORT_LINT
+USR_CPPFLAGS += -DSUPPORT_LINT
 endif
 endif
 
